--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # REACT_APP_API_URL=http://localhost:5000
-REACT_APP_API_URL=http://89.116.34.49:5000
+# REACT_APP_API_URL=http://89.116.34.49:5000
+REACT_APP_API_URL=https://api.academicturf.com
